--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Travel CAT</title>
+    <link rel="shortcut icon" href="static/shortcut_cat_icon.png">
+    <meta name="discription" content="TRAVEL CAT" />
+    <meta name="keywords" content="Travel Cat, Travel, 旅行貓" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   </head>
   <body>
