--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Travel CAT</title>
-    <link rel="shortcut icon" href="static/shortcut_cat_icon.png">
+    <link rel="shortcut icon" href="@/assets/img/shortcut_cat_icon.ico">
     <meta name="discription" content="TRAVEL CAT" />
     <meta name="keywords" content="Travel Cat, Travel, 旅行貓" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
