--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Travel CAT</title>
+    <title>TRAVEL CAT</title>
     <link rel="shortcut icon" href="@/assets/img/shortcut_cat_icon.ico">
     <meta name="discription" content="TRAVEL CAT" />
     <meta name="keywords" content="Travel Cat, Travel, 旅行貓" />
